DOM Tic Tac Toe Game

--- a/dom_TicTacToe_game/dom_TicTacToe_game.html
+++ b/dom_TicTacToe_game/dom_TicTacToe_game.html
@@ -13,13 +13,10 @@
         <h1 class="display-4">Welcome to Tic Tac Toe!</h1>
         <a class="btn btn-primary btn-lg" href="#" role="button">Restart</a>
       </div>
-    </div>
-    <div class="container">
-
-      <table>
+      <table align='center'>
         <tbody>
           <tr>
-            <td id="td1"></td>
+            <td></td>
             <td></td>
             <td></td>
           </tr>
@@ -37,8 +34,7 @@
       </table>
 
     </div>
+    <script src="dom_TicTacToe_game.js">
+    </script>
   </body>
-  <script src="dom_TicTacToe_game.js">
-
-  </script>
 </html>
